# pmetal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  METAL_GPU_TEST_BUG.md  README.md  justfile  metrics.jsonl  security.md  social_posts.md  test_overfit.jsonl
crates/pmetal-bridge/: Cargo.toml  build.rs
crates/pmetal-bridge/benches/: turboquant_qjl_ablation.rs
crates/pmetal-bridge/cpp/: bridge.cpp  bridge.h  bridge_compiled.cpp  bridge_inference.cpp  bridge_internal.h  bridge_native.cpp  bridge_training.cpp  bridge_turboquant.cpp  bridge_turboquant_attn_d128.cpp  bridge_turboquant_attn_d256.cpp  bridge_turboquant_hamming.cpp  bridge_turboquant_internal.h  bridge_turboquant_score.cpp
crates/pmetal-bridge/cpp/bridge/: compiled.h  ops.h  quantized.h  turboquant.h
crates/pmetal-bridge/examples/: native_qwen35.rs  turboquant_q8_microbench.rs
crates/pmetal-bridge/src/: compat.rs  compile.rs  decode.rs  deepseek_native.rs  error.rs  gemma4_native.rs  gpt_oss_native.rs  inline_array.rs  lib.rs  llama4_native.rs  mlx_quant.rs  native_loader.rs  optimizer.rs  qwen3_native.rs  scalar.rs  training.rs  try_ops.rs  turboquant.rs
crates/pmetal-bridge/src/compat/: indexing.rs  layers.rs  mod.rs  nn.rs  ops.rs  optimizers.rs  traits.rs
crates/pmetal-bridge/src/deepseek_native/: weights.rs
crates/pmetal-bridge/src/inline_array/: compiled.rs  dtype.rs  eval.rs  ffi.rs  mod.rs  ops.rs  quantized.rs  reductions.rs  safetensors.rs  shape_ops.rs  turboquant_methods.rs
crates/pmetal-bridge/src/llama4_native/: attention.rs  cache.rs  forward.rs  mod.rs  moe.rs  weights.rs
crates/pmetal-bridge/src/qwen3_native/: attention.rs  cache.rs  forward.rs  generate.rs  load.rs  mlp_moe.rs  mod.rs  weights.rs
crates/pmetal-bridge/src/turboquant/: ablation.rs  cache.rs  config.rs  dispatch.rs  encode.rs  gpu_keystore.rs  host_keystore.rs  math.rs  mod.rs  tests.rs
crates/pmetal-core/: Cargo.toml  README.md
crates/pmetal-core/src/: config.rs  constants.rs  error.rs  events.rs  fields.rs  lib.rs  scheduler.rs  secrets.rs  traits.rs  types.rs
crates/pmetal-core/src/jobs/: fuse.rs  quantize.rs
crates/pmetal-gguf/: Cargo.toml  README.md
crates/pmetal-gguf/proptest-regressions/: iq_quants.txt
crates/pmetal-gguf/src/: config.rs  dequant.rs  dynamic.rs  fp4.rs  imatrix.rs  iq_quants.rs  k_quants.rs  lib.rs  quantize.rs  reader.rs  types.rs  vec_dot.rs  writer.rs
crates/pmetal-gguf/tests/: imatrix_test.rs
crates/pmetal-hub/: Cargo.toml  README.md
crates/pmetal-hub/src/: cache.rs  download.rs  fit.rs  lib.rs  upload.rs
crates/pmetal-merge/: Cargo.toml  README.md
crates/pmetal-merge/benches/: merge_benchmarks.rs
crates/pmetal-merge/src/: async_merge.rs  batched.rs  config.rs  consensus.rs  error.rs  fp8_merge.rs  gpu_merge.rs  lib.rs  loader.rs  lora_merge.rs  merge.rs  sparsify.rs
crates/pmetal-merge/src/methods/: breadcrumbs.rs  dare.rs  della.rs  linear.rs  mod.rs  model_stock.rs  multislerp.rs  nearswap.rs  passthrough.rs  ram.rs  slerp.rs  souper.rs  task_arithmetic.rs  ties.rs
crates/pmetal-metal/: Cargo.toml  README.md  build.rs
crates/pmetal-metal/benches/: kernel_dispatch.rs
crates/pmetal-metal/src/: accelerate.rs  async_scheduler.rs  backend.rs  bridge.rs  buffer.rs  context.rs  dispatch.rs  error.rs  lib.rs  metal3_backend.rs  pipeline.rs  tuna.rs
crates/pmetal-metal/src/ane/: dynamic_kernel.rs  dynamic_trainer.rs  inference.rs  inference_hybrid.rs  iosurface.rs  kernel.rs  mil.rs  runtime.rs
crates/pmetal-metal/src/kernels/: batch_encoder.rs  batched_lora.rs  dequant.rs  dispatch.rs  flash_attention.rs  fp8_training.rs  fused_cross_entropy.rs  fused_distill.rs  fused_dora.rs  fused_lora.rs  fused_merge.rs  fused_moe.rs  fused_norm_lora.rs  fused_rope.rs  fused_sampler.rs  fused_swiglu.rs  fused_training.rs  mod.rs  moe.rs  mpp_flash_attention.rs  mpp_fused_cross_entropy.rs  mpp_fused_distill.rs  mpp_fused_rope.rs  mpp_fused_swiglu.rs  turboquant.rs
crates/pmetal-metal/src/metal4/: backend.rs
crates/pmetal-mhc/: Cargo.toml  README.md
crates/pmetal-mhc/benches/: mhc_kernels.rs  sinkhorn.rs
crates/pmetal-mhc/src/: config.rs  layer.rs  lib.rs  mappings.rs  params.rs  sinkhorn.rs
crates/pmetal-mhc/src/kernels/: metal_impl.rs  metal_shaders.metal  metal_shaders.rs  mod.rs
crates/pmetal-mlx/: Cargo.toml  README.md
crates/pmetal-mlx/src/: array_ext.rs  attention.rs  bridge.rs  error.rs  fp8_quantization.rs  gradient_checkpoint.rs  grouped_gemm_moe.rs  kv_cache.rs  lib.rs  memory.rs  moe.rs  neftune.rs  offloading.rs  prefix_cache.rs  sequence_packing.rs  smart_checkpoint.rs  speculative.rs  test_utils.rs
crates/pmetal-mlx/src/kernels/: cross_entropy.rs  cut_cross_entropy.rs  differentiable_attention.rs  fast_lora.rs  fused_attention.rs  gated_delta.rs  metal_cross_entropy.rs  metal_norm_lora.rs  metal_swiglu.rs  mod.rs  quantized_matmul.rs  rms_norm.rs  rope.rs  swiglu.rs  training_attention.rs  utils.rs
crates/pmetal-mlx/src/kv_cache/: fused_batch.rs  mamba.rs  mod.rs  paged.rs  quantized.rs  rotating.rs  standard.rs  tests.rs  turboquant.rs
crates/pmetal-mlx/src/quantization/: fp4.rs  group.rs  int8.rs  mod.rs  nf4.rs
crates/pmetal-mlx/tests/: training_integration.rs
crates/pmetal-models/: Cargo.toml  README.md
crates/pmetal-models/src/: ddtree.rs  decoder_layer.rs  dflash_decoder.rs  dflash_native_target.rs  dispatcher.rs  expert_dequant.rs  expert_io.rs  expert_layout.rs  expert_prefetch.rs  fp8_utils.rs  generation.rs  lib.rs  loader.rs  moe.rs  moe_routing.rs  ollama.rs  registry.rs  rl_generation.rs  shard.rs  speculative.rs  traits.rs  weight_cache.rs  weight_format.rs
crates/pmetal-models/src/architectures/: clip.rs  cohere.rs  deepseek.rs  dflash_draft.rs  flux.rs  gemma.rs  gemma4.rs  gpt_oss.rs  granite.rs  llama.rs  llama4.rs  mistral.rs  mllama.rs  mod.rs  nemotron_h.rs  phi.rs  pixtral.rs  qwen2.rs  qwen2_vl.rs  qwen3.rs  qwen3_moe.rs  qwen3_next.rs  starcoder2.rs  (+6 more)
crates/pmetal-models/tests/: fused_batched_parity.rs  gemma4_parity.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gguf_reader.rs
(+355 files in other folders)
