[package]
name = "pmetal-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Zero-allocation MLX bridge — standalone C++ layer that replaces mlx-rs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
links = "pmetal_bridge"

[features]
default = ["accelerate", "metal"]
accelerate = []
metal = []

[dependencies]
half = { workspace = true }
memmap2 = "0.9"
libc = "0.2"
safetensors = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

[dev-dependencies]

[build-dependencies]
cc = "1"
cmake = "0.1"

# This crate is the C++ FFI boundary to MLX and must use `unsafe` pervasively
# (`inline_array` wraps mlx::core::array via extern "C" calls; ~280 unsafe blocks).
# We declare an explicit `[lints.rust]` section so the `unsafe_code = "allow"`
# exemption is documented rather than relying on the implicit bypass that
# occurs when a crate omits `workspace = true`. The workspace-level
# `unsafe_code = "deny"` still applies to every other crate.
[lints.rust]
unsafe_code = "allow"
