[package]
name = "pmetal-merge"
description = "Model merging toolkit for PMetal - SLERP, TIES, DARE, and more"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
pmetal-core = { workspace = true }
pmetal-mlx = { workspace = true }
mlx-rs = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
hf-hub = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
