[package]
name = "pmetal-metal"
description = "Metal GPU compute kernels for PMetal - FlashAttention and optimized ML primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
# Internal crates
pmetal-core = { workspace = true }

# Metal bindings (modern objc2 ecosystem)
# Using default features which include most Metal types we need
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSError", "NSString"] }
objc2-metal = { version = "0.3", features = ["MTLEvent", "MTLFence"] }
dispatch2 = "0.3"
block2 = "0.6"

# Numeric types
half = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Synchronization
parking_lot = "0.12"

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true

# Benchmarks will be added later
# [[bench]]
# name = "flash_attention"
# harness = false
