[package]
name = "pmetal-mlx"
description = "MLX backend implementation for PMetal LLM fine-tuning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pmetal-core = { workspace = true }
pmetal-metal = { workspace = true }
pmetal-bridge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serial_test = "3"
tempfile = { workspace = true }

[features]
# Enables `pmetal_mlx::test_utils` for cross-crate parity tests. Empty
# (no extra deps) — production builds never see it. Integration tests in
# downstream crates that need shared parity helpers add this feature in
# their own `[dev-dependencies]`.
test-utils = []

[lints]
workspace = true
